--- a/kubernetes/cfs-hwsync-agent/Chart.yaml
+++ b/kubernetes/cfs-hwsync-agent/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 description: "Kubernetes resources for CFS Hardware Sync Agent"
 name: "cfs-hwsync-agent"
 home: "scms/cfs-hwsync-agent"
-version: 1.4.5
+version: @VERSION@
 keywords:
   - cfs
   - cfs-hwsync-agent
