--- a/kubernetes/cfs-hwsync-agent/Chart.yaml
+++ b/kubernetes/cfs-hwsync-agent/Chart.yaml
@@ -1,10 +1,24 @@
-apiVersion: v1
-description: "Kubernetes resources for CFS Hardware Sync Agent"
-name: "cfs-hwsync-agent"
-home: "scms/cfs-hwsync-agent"
-version: @VERSION@
+apiVersion: v2
+name: cfs-hwsync-agent
+version: 0.0.0-chart
+description: Kubernetes resources for CFS Hardware Sync Agent
 keywords:
-  - cfs
-  - cfs-hwsync-agent
+- cfs
+- cfs-hwsync-agent
+home: https://github.com/Cray-HPE/cfs-hwsync-agent
 sources:
-  - "https://github.com/Cray-HPE/cfs-hwsync-agent"
+- https://github.com/Cray-HPE/cfs-hwsync-agent
+dependencies:
+- name: cray-service
+  version: ^7.0.0
+  repository: https://artifactory.algol60.net/artifactory/csm-helm-charts/
+maintainers:
+- name: rbak-hpe
+  email: ryan.bak@hpe.com
+- name: rkleinman-hpe
+  email: randy.kleinman@hpe.com
+annotations:
+  artifacthub.io/images: |
+    - name: cfs-hwsync-agent
+      image: artifactory.algol60.net/csm-docker/stable/cfs-hwsync-agent:0.0.0-image
+  artifacthub.io/license: MIT
