--- a/update_versions.conf
+++ b/update_versions.conf
@@ -15,5 +15,11 @@
 #sourcefile: v2.txt
 #targetfile: 1/2/3.txt
 
+tag: 0.0.0-chart
 sourcefile: .chart_version
 targetfile: kubernetes/cfs-hwsync-agent/Chart.yaml
+
+tag: 0.0.0-image
+sourcefile: .docker_version
+targetfile: kubernetes/cfs-hwsync-agent/Chart.yaml
+targetfile: kubernetes/cfs-hwsync-agent/values.yaml
