--- a/update_versions.conf
+++ b/update_versions.conf
@@ -23,3 +23,7 @@ tag: 0.0.0-image
 sourcefile: .docker_version
 targetfile: kubernetes/cfs-hwsync-agent/Chart.yaml
 targetfile: kubernetes/cfs-hwsync-agent/values.yaml
+
+tag: 0.0.0-liveness
+sourcefile: liveness.version
+targetfile: constraints.txt
