When building unstable charts, have them point to the corresponding unstable Docker image

--- a/update_versions.conf
+++ b/update_versions.conf
@@ -27,3 +27,8 @@ targetfile: kubernetes/cfs-hwsync-agent/values.yaml
 tag: 0.0.0-liveness
 sourcefile: liveness.version
 targetfile: constraints.txt
+
+sourcefile-novalidate: .stable
+tag: S-T-A-B-L-E
+targetfile: kubernetes/cfs-hwsync-agent/Chart.yaml
+targetfile: kubernetes/cfs-hwsync-agent/values.yaml
