--- a/kubernetes/cfs-hwsync-agent/values.yaml
+++ b/kubernetes/cfs-hwsync-agent/values.yaml
@@ -1,7 +1,7 @@
 #
 # MIT License
 #
-# (C) Copyright 2021-2022 Hewlett Packard Enterprise Development LP
+# (C) Copyright 2021-2022, 2024 Hewlett Packard Enterprise Development LP
 #
 # Permission is hereby granted, free of charge, to any person obtaining a
 # copy of this software and associated documentation files (the "Software"),
@@ -31,7 +31,7 @@
 #   pullPolicy: "" (default = "IfNotPresent")
 
 hwsync_image:
-  repository: artifactory.algol60.net/csm-docker/stable/cfs-hwsync-agent
+  repository: artifactory.algol60.net/csm-docker/S-T-A-B-L-E/cfs-hwsync-agent
   version: 0.0.0-image
 
 cray-service:
@@ -45,7 +45,7 @@ cray-service:
     cfs-hwsync-agent:
       name: cfs-hwsync-agent
       image:
-        repository: artifactory.algol60.net/csm-docker/stable/cfs-hwsync-agent
+        repository: artifactory.algol60.net/csm-docker/S-T-A-B-L-E/cfs-hwsync-agent
       livenessProbe:
         exec:
           command:
