When building unstable charts, have them point to the corresponding unstable Docker image
(cherry picked from commit 17ff6b32e0057ad0b53741034414c40d691aa2dd)

--- a/update_versions.conf
+++ b/update_versions.conf
@@ -23,3 +23,8 @@ tag: 0.0.0-image
 sourcefile: .docker_version
 targetfile: kubernetes/cfs-hwsync-agent/Chart.yaml
 targetfile: kubernetes/cfs-hwsync-agent/values.yaml
+
+sourcefile-novalidate: .stable
+tag: S-T-A-B-L-E
+targetfile: kubernetes/cfs-hwsync-agent/Chart.yaml
+targetfile: kubernetes/cfs-hwsync-agent/values.yaml
